# rustInAction

./: .gitignore  README.md
Chapter1/: Cargo.toml
Chapter1/src/: ch1-cereals.rs  ch1-fruit.rs  ch1-hello.rs  ch1-letters.rs  ch1-penguins.rs  ch1-race.rs
Chapter2/: Cargo.toml  output.txt  readme.md
Chapter2-Com/: Cargo.toml
Chapter2/grep-lite/: Cargo.toml  test.txt
Chapter2/grep-lite/src/: main.rs
Chapter2/src/: ch2-add-with-lifetimes.rs  ch2-bell-numbers.rs  ch2-bufreader-lines.rs  ch2-catalan-numbers.rs  ch2-complex.rs  ch2-first-steps.rs  ch2-intro-to-numbers.rs  ch2-introducing-vec.rs  ch2-mandelbrot.rs  ch2-match-needles.rs  ch2-needle-in-haystack.rs  ch2-non-base2.rs  ch2-read-file.rs  ch2-simple-arrays.rs  ch2-simple-with-enumerate.rs  ch2-simple-with-linenums.rs  ch2-str-simple-pattern.rs  ch2-while-true-incr-count.rs  ch2-with-regex.rs
Chapter2/tmp/grep-lite/: Cargo.toml
Chapter2/tmp/grep-lite/src/: main.rs
Chapter2/two_one_five/: Cargo.toml
Chapter2/two_one_five/src/: main.rs
Chapter2/two_one_four/: Cargo.toml
Chapter2/two_one_four/src/: main.rs
Chapter2/two_one_nine/: Cargo.toml
Chapter2/two_one_nine/src/: main.rs
Chapter2/two_one_seven/: Cargo.toml
Chapter2/two_one_six/: Cargo.toml
Chapter2/two_one_six/src/: main.rs
Chapter2/two_one_three/: Cargo.toml
Chapter2/two_one_three/src/: main.rs
Chapter2/two_one_two/: Cargo.toml
Chapter2/two_one_two/src/: main.rs
Chapter3/: Cargo.toml
Chapter3/src/: ch3-defining-files-neatly.rs  ch3-error.rs  ch3-file-docced.rs  ch3-file-states.rs  ch3-implementing-display.rs  ch3-mock-file.rs  ch3-newtype-pattern.rs  ch3-not-quite-file-2.rs  ch3-parse-log.rs  ch3-pub-file.rs
Chapter3/three_one/: Cargo.toml
Chapter3/three_one/src/: ch3-defining-files-neatly.rs  ch3-file-doced.rs  ch3-file-states.rs  ch3-implementing-display.rs  ch3-mock-file.rs  ch3-parse-log.rs  ch3-skelton-read-trait.rs  main.rs
Chapter3/tmp/fileresult/: Cargo.toml
Chapter3/tmp/fileresult/src/: main.rs
Chapter3/tmp/globalerror/: Cargo.toml
Chapter4/: Cargo.toml
Chapter4/src/: ch4-check-sats-2.rs  ch4-check-sats-3-working.rs  ch4-check-sats-3.rs  ch4-check-sats-clone-and-copy-traits.rs  ch4-rc-groundstation.rs  ch4-sat-mailbox.rs  ch4-short-lived-strategy.rs
Chapter5/: Cargo.toml
Chapter5/src/: ch5-cpu1.rs  ch5-cpu2.rs  ch5-cpu3.rs  ch5-cpu4.rs  ch5-endianness.rs  ch5-f32-as-u32.rs  ch5-impossible-addition.rs  ch5-to-oblivion.rs  ch5-u16-bit-patterns.rs  ch5-u8-to-mock-rand.rs  ch5-visualising-f32.rs  lib.rs
Chapter6/: Cargo.toml
Chapter6/src/: ch6-boxing.rs  ch6-fountain.rs  ch6-mem.rs  ch6-memscan.rs  ch6-pointer-1.rs  ch6-pointer-2.rs  ch6-references.rs
tmp/fileresult/: Cargo.toml
tmp/fileresult/src/: main.rs
tmp/globalerror/: Cargo.toml
tmp/globalerror/src/: main.rs
