[package]
name = "Chapter2"
version = "0.1.0"
authors = ["Jad Pamment <jad.apamment@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "*"

[[bin]]
name = "ok"
path = "src/ch2-ok.rs"

[[bin]]
name = "first-steps"
path = "src/ch2-first-steps.rs"

[[bin]]
name = "intro-to-numbers"
path = "src/ch2-intro-to-numbers.rs"

[[bin]]
name = "non-base2"
path = "src/ch2-non-base2.rs"

[[bin]]
name = "complex"
path = "src/ch2-complex.rs"

[[bin]]
name = "needle-in-hay"
path = "src/ch2-needle-in-haystack.rs"

[[bin]]
name = "bell-nums"
path = "src/ch2-bell-numbers.rs"

[[bin]]
name = "cat-nums"
path = "src/ch2-catalan-numbers.rs"

[[bin]]
name = "incr"
path = "src/ch2-while-true-incr-count.rs"

[[bin]]
name = "match-need"
path = "src/ch2-match-needles.rs"

[[bin]]
name = "mandel"
path = "src/ch2-mandelbrot.rs"

[[bin]]
name = "lifetime"
path = "src/ch2-add-with-lifetimes.rs"

[[bin]]
name = "simple-pattern"
path = "src/ch2-str-simple-pattern.rs"

[[bin]]
name = "simple-linenums"
path = "src/ch2-simple-with-linenums.rs"
