[package]
name = "Chapter3"
version = "0.1.0"
authors = ["Jad Pamment <jad.apamment@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "not-quite"
path = "src/ch3-not-quite-file-1.rs"

[[bin]]
name = "mock-file"
path = "src/ch3-mock-file.rs"

[[bin]]
name = "newtype"
path = "src/ch3-newtype-pattern.rs"

[[bin]]
name = "not-quite-2"
path = "src/ch3-not-quite-file-2.rs"

[[bin]]
name = "neat"
path = "src/ch3-defining-files-neatly.rs"