[package]
name = "three_one"
version = "0.1.0"
authors = ["Jad Pamment <jad.apamment@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "ch3-mock"
path = "src/ch3-mock-file.rs"

[[bin]]
name = "ch3-def"
path = "src/ch3-defining-files-neatly.rs"

[[bin]]
name = "ch3-log"
path = "src/ch3-parse-log.rs"

[[bin]]
name = "ch3-fs"
path = "src/ch3-file-states.rs"

[[bin]]
name = "ch3-sk"
path = "src/ch3-skelton-read-trait.rs"

[[bin]]
name = "ch3-id"
path = "src/ch3-implementing-display.rs"

[[bin]]
name = "ch3-do"
path = "src/ch3-file-doced.rs"